agency-website/emergency_log.txt
[7:12:22 PM] 🚨 EMERGENCY START INITIATED
[7:12:22 PM] Cleaning up ports 3010, 3011, 5173...
[7:12:24 PM] Starting API Server (Port 3010)...
[7:12:24 PM] Starting Dashboard (Port 3011)...
[7:12:25 PM] [SERVER ERROR]: C:\Users\USER\Desktop\Asif Agency Website\Ai-agency-wesite\GM Events agent\server.ts:22
import { getContactExtractorProgress } from './contact_extractor.js';
         ^
SyntaxError: The requested module './contact_extractor.js' does not provide an export named 'getContactExtractorProgress'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.14.0

[7:12:34 PM] Check complete. See log above for errors.
